feat(marketers): add completed job performance statistics
