# internal/server/server.go
@@ -105,6 +105,9 @@ func New(deps Dependencies) *fiber.App {
 	serviceRepo := postgres.NewServiceRepository(deps.DB)
 	serviceService := services.NewServiceService(serviceRepo, memberships)
 	serviceHandler := httpapi.NewServiceHandler(serviceService)
+	statisticsRepo := postgres.NewMarketerStatisticsRepository(deps.DB)
+	statisticsService := services.NewStatisticsService(statisticsRepo, memberships)
+	statisticsHandler := httpapi.NewStatisticsHandler(statisticsService)
 	surveyRepo := postgres.NewSurveyRepository(deps.DB)
 	surveyService := services.NewSurveyService(surveyRepo)
 	surveyHandler := httpapi.NewSurveyHandler(surveyService)
@@ -116,6 +119,7 @@ func New(deps Dependencies) *fiber.App {
 	api.Post("/me/services", protectedUsers, serviceHandler.Create)
 	api.Patch("/me/services/:id", protectedUsers, serviceHandler.Update)
 	api.Delete("/me/services/:id", protectedUsers, serviceHandler.Delete)
+	api.Get("/me/statistics", protectedUsers, statisticsHandler.GetMyStatistics)
 	api.Post("/surveys", protectedUsers, surveyHandler.Create)
 	api.Get("/surveys/:id", protectedUsers, surveyHandler.Get)
 	api.Patch("/surveys/:id", protectedUsers, surveyHandler.Update)
